--- a/_data/index/careers.yml
+++ b/_data/index/careers.yml
@@ -1,30 +1,31 @@
 # careers section data
 # if you don't have language feature(language.yml is empty), ignore "i18n" items
 - name:
-    detail: Company A
+    detail: Radboud University
     i18n: company_a
   desc:
-    detail: I worked at Company A ...
+    detail: PhD Candidate at Radboud University Nijmegen
     i18n: company_a_desc
   date:
-    detail: Apr. 2016
+    detail: Sep. 2013 - Sep. 2017
     i18n: company_a_date
   job:
     detail: CTO
     i18n: company_a_job
   icon: fa-plus-square
-  present: true
+  present: false
 
 - name:
-    detail: Company B
+    detail: Ghent University
     i18n: company_b
   desc:
-    detail: I worked at Company B ...
+    detail: Postdoctoral Researcher at the Dept. of Experimental Psychology
     i18n: company_b_desc
   date:
-    detail: Jun. 2015
+    detail: Oct. 2017
     i18n: company_b_date
   job:
-    detail: Full Stack Developer
+    detail: Postdoctoral Researcher
     i18n: company_b_job
   icon: fa-plus-square
+  present: true
