--- a/_config.yml
+++ b/_config.yml
@@ -16,18 +16,18 @@ author:  # change following line to your infomation.
   last_name: Franken  # Be used at index page about me section.
   avatar: /static/assets/img/landing/avatar.jpg  # upload your avatar at directory and edit it.
   github_username: frankenmatthias  # Leave blank if you don't have now
-  linkedin_id:  # Leave blank if you don't have now
+  linkedin_id: matthias-franken  # Leave blank if you don't have now
   facebook_username:   # Leave blank if you don't have now
   twitter_username: MatthiasFranken  # Leave blank if you don't have now
   email: matthias.franken@ugent.be  # Leave blank if you don't have now
   cv:  # An online CV can be printed as PDF, leave blank if you don't have now
   # skill icons are on avatar's left and right side. Reference urls are http://fontawesome.io/ and http://fizzed.com/oss/font-mfizz
   skill_icon1:
-    - name: icon-apache
-    - name: fa-linux
+    - name: language
+    - name: brain
   skill_icon2:
-    - name: fa-linux
-    - name: icon-apache
+    - name: brain
+    - name: waveform-path
   desc: Introduce myself will be here.  # Describe yourself.
 
 # comment
