--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ author:  # change following line to your infomation.
   last_name: Franken  # Be used at index page about me section.
   avatar: /static/assets/img/landing/avatar.jpg  # upload your avatar at directory and edit it.
   github_username: frankenmatthias  # Leave blank if you don't have now
-  linkedin_id: matthias-franken  # Leave blank if you don't have now
+  linkedin_id: matthias-franken-340a7146  # Leave blank if you don't have now
   facebook_username:   # Leave blank if you don't have now
   twitter_username: MatthiasFranken  # Leave blank if you don't have now
   email: matthias.franken@ugent.be  # Leave blank if you don't have now
@@ -27,7 +27,7 @@ author:  # change following line to your infomation.
     - name: brain
   skill_icon2:
     - name: brain
-    - name: waveform-path
+    - name: language
   desc: Introduce myself will be here.  # Describe yourself.
 
 # comment
@@ -48,7 +48,7 @@ gio:  # if you wanna this feature, go to https://www.growingio.com/ to get your 
   # id:
 
 ## donation
-donation: on  # type 'on'/'off' to choice display donation button at post page or not
+donation: off  # type 'on'/'off' to choice display donation button at post page or not
 
 ## carousels
 index_carousel: on  # index page carousel switch
