--- a/_data/index/careers.yml
+++ b/_data/index/careers.yml
@@ -1,31 +1,31 @@
 # careers section data
 # if you don't have language feature(language.yml is empty), ignore "i18n" items
 - name:
-    detail: Radboud University
+    detail: Ghent University
     i18n: company_a
   desc:
-    detail: PhD Candidate at Radboud University Nijmegen
+    detail: Postdoctoral Researcher, Dept. of Experimental Psychology
     i18n: company_a_desc
   date:
-    detail: Sep. 2013 - Sep. 2017
+    detail: Oct. 2017
     i18n: company_a_date
   job:
-    detail: CTO
+    detail: Postdoctoral Researcher
     i18n: company_a_job
   icon: fa-plus-square
-  present: false
+  present: true
 
 - name:
-    detail: Ghent University
+    detail: Radboud University
     i18n: company_b
   desc:
-    detail: Postdoctoral Researcher at the Dept. of Experimental Psychology
+    detail: PhD at the Donders Institute for Brain, Cognition and Behaviour & Max Planck Institute for Psycholinguistics
     i18n: company_b_desc
   date:
-    detail: Oct. 2017
+    detail: Sep. 2013 - Sep. 2017
     i18n: company_b_date
   job:
-    detail: Postdoctoral Researcher
+    detail: PhD candidate
     i18n: company_b_job
   icon: fa-plus-square
-  present: true
+  present: false
