--- a/_data/landing.yml
+++ b/_data/landing.yml
@@ -23,6 +23,12 @@
   name: Projects
   tpl: projects.html
   css: project
+  
+- id: publications
+  i18n: nav.publications
+  name: Publications
+  tpl: publications.html
+  css: publications
 
 #- id: blog
 #  i18n: nav.blog
