--- a/_data/index/publications.yml
+++ b/_data/index/publications.yml
@@ -12,3 +12,12 @@
   issue: 10
   pages: 2371-2379
 
+- name: Self-monitoring in the cerebral cortex: Neural responses to small pitch shifts in auditory feedback during speech production
+  i18n: jalpc
+  type: journal
+  outlet: NeuroImage
+  year: 2018
+  doi: 10.1016/j.neuroimage.2018.06.061
+  authors: Franken, M. K., Eisner, F., Acheson, D. J., McQueen, J. M., Hagoort, P., & Schoffelen, J.-M.
+  volume: 179
+  pages: 326-336
