fixed colon issue

--- a/_data/index/publications.yml
+++ b/_data/index/publications.yml
@@ -12,7 +12,7 @@
   issue: 10
   pages: 2371-2379
 
-- name: Self-monitoring in the cerebral cortex: Neural responses to small pitch shifts in auditory feedback during speech production
+- name: Self-monitoring in the cerebral cortex&#58; Neural responses to small pitch shifts in auditory feedback during speech production
   i18n: jalpc
   type: journal
   outlet: NeuroImage
