--- a/_data/index/publications.yml
+++ b/_data/index/publications.yml
@@ -21,3 +21,35 @@
   authors: Franken, M. K., Eisner, F., Acheson, D. J., McQueen, J. M., Hagoort, P., & Schoffelen, J.-M.
   volume: 179
   pages: 326-336
+
+- name: Opposing and following responses in sensorimotor speech control&#58; Why responses go both ways
+  i18n: jalpc
+  type: journal
+  outlet: Psychonomic Bulletin & Review
+  year: 2018
+  doi: 10.3758/s13423-018-1494-x
+  authors: Franken, M. K., Acheson, D. J., McQueen, J. M., Hagoort, P., & Eisner, F.
+  volume: 25
+  issue: 4
+  pages: 1458-1467
+
+- name: Individual variability as a window on production-perception interactions in speech motor control 
+  i18n: jalpc
+  type: journal
+  outlet: Journal of the Acoustical SOciety of America
+  year: 2017
+  doi: 10.1121/1.5006899
+  authors: Franken, M. K., Acheson, D. J., McQueen, J. M., Eisner, F., & Hagoort, P.
+  volume: 142
+  issue: 4
+  pages: 2007-2018
+  
+- name: Modulations of the auditory M100 in an imitation task 
+  i18n: jalpc
+  type: journal
+  outlet: Brain and Language
+  year: 2015
+  doi: 10.1016/j.bandl.2015.01.001
+  authors: Franken, M. K., Hagoort, P., & Acheson, D. J.
+  volume: 142
+  pages: 18-23
