--- a/_data/landing.yml
+++ b/_data/landing.yml
@@ -30,9 +30,9 @@
   tpl: publications.html
   css: publications
 
-#- id: blog
-#  i18n: nav.blog
-#  name: Blog
-#  tpl: blog.html
-#  page: blog/
-#  css: testimonials navy-section
+- id: blog
+  i18n: nav.blog
+  name: Blog
+  tpl: blog.html
+  page: blog/
+  css: testimonials navy-section
