--- a/_data/index/publications.yml
+++ b/_data/index/publications.yml
@@ -7,7 +7,7 @@
   outlet: Quarterly Journal of Experimental Psychology
   year: 2019
   doi: 10.1177/1747021819838939
-  authors: Franken, M. K., Acheson, D. J., McQueen, J. M., Hagoort, P., & Eisner, F.
+  authors: <b>Franken, M. K.</b>, Acheson, D. J., McQueen, J. M., Hagoort, P., & Eisner, F.
   volume: 72
   issue: 10
   pages: 2371-2379
