--- a/_data/index/publications.yml
+++ b/_data/index/publications.yml
@@ -18,7 +18,7 @@
   outlet: NeuroImage
   year: 2018
   doi: 10.1016/j.neuroimage.2018.06.061
-  authors: Franken, M. K., Eisner, F., Acheson, D. J., McQueen, J. M., Hagoort, P., & Schoffelen, J.-M.
+  authors: <b>Franken, M. K.</b>, Eisner, F., Acheson, D. J., McQueen, J. M., Hagoort, P., & Schoffelen, J.-M.
   volume: 179
   pages: 326-336
 
@@ -28,7 +28,7 @@
   outlet: Psychonomic Bulletin & Review
   year: 2018
   doi: 10.3758/s13423-018-1494-x
-  authors: Franken, M. K., Acheson, D. J., McQueen, J. M., Hagoort, P., & Eisner, F.
+  authors: <b>Franken, M. K.</b>, Acheson, D. J., McQueen, J. M., Hagoort, P., & Eisner, F.
   volume: 25
   issue: 4
   pages: 1458-1467
@@ -39,7 +39,7 @@
   outlet: Journal of the Acoustical SOciety of America
   year: 2017
   doi: 10.1121/1.5006899
-  authors: Franken, M. K., Acheson, D. J., McQueen, J. M., Eisner, F., & Hagoort, P.
+  authors: <b>Franken, M. K.</b>, Acheson, D. J., McQueen, J. M., Eisner, F., & Hagoort, P.
   volume: 142
   issue: 4
   pages: 2007-2018
@@ -50,6 +50,6 @@
   outlet: Brain and Language
   year: 2015
   doi: 10.1016/j.bandl.2015.01.001
-  authors: Franken, M. K., Hagoort, P., & Acheson, D. J.
+  authors: <b>Franken, M. K.</b>, Hagoort, P., & Acheson, D. J.
   volume: 142
   pages: 18-23
