--- a/_data/index/publications.yml
+++ b/_data/index/publications.yml
@@ -36,7 +36,7 @@
 - name: Individual variability as a window on production-perception interactions in speech motor control 
   i18n: jalpc
   type: journal
-  outlet: Journal of the Acoustical SOciety of America
+  outlet: Journal of the Acoustical Society of America
   year: 2017
   doi: 10.1121/1.5006899
   authors: <b>Franken, M. K.</b>, Acheson, D. J., McQueen, J. M., Eisner, F., & Hagoort, P.
