--- a/_data/index/links.yml
+++ b/_data/index/links.yml
@@ -1,18 +1,16 @@
 # links section data
-- last_name: Name 1
+- last_name: ORCID ID
   first_name:
-  desc: CEO
-  website: https://www.google.com
-  email: ceo@google.com
+  desc: ORCID
+  website: https://orcid.org/0000-0002-6133-8756
 
-- last_name: Donate
-  first_name: Jalpc
-  desc: Support Jalpc
-  website: http://www.jarrekk.com/donate/
-  email: me@jarrekk.com
+- last_name: UGent
+  desc: UGent profile page
+  website: https://telefoonboek.ugent.be/nl/people/802002718561
+  icon: fa-university
 
-- last_name: LN
-  first_name: FN
-  desc: COO
-  website: https://github.com
-  email: coo@google.com
+- last_name: UGent
+  desc: Dept. Experimental Psychology
+  website: https://www.ugent.be/pp/experimentele-psychologie/en
+  icon: fa-university
+
