--- a/_data/landing.yml
+++ b/_data/landing.yml
@@ -12,27 +12,33 @@
   tpl: career.html
   css: timeline
 
-- id: skills
-  i18n: nav.skills
-  name: Skills
-  tpl: skills.html
-  css: team
+# - id: skills
+#   i18n: nav.skills
+#   name: Skills
+#   tpl: skills.html
+#   css: team
 
-- id: projects
-  i18n: nav.projects
-  name: Projects
-  tpl: projects.html
-  css: project
+# - id: projects
+#   i18n: nav.projects
+#   name: Projects
+#   tpl: projects.html
+#   css: project
   
 - id: publications
   i18n: nav.publications
-  name: Publications
+  name: Recent
   tpl: publications.html
   css: publications
 
-- id: blog
+- id: Academic Record
   i18n: nav.blog
-  name: Blog
-  tpl: blog.html
-  page: blog/
-  css: testimonials navy-section
+  name: Academic Record
+  tpl: record.html
+  page: record/
+  css: #testimonials
+
+- id: Links
+  i18n: nav.link
+  name: Links
+  tpl: links.html
+  css: contact
