added banner picture defense + education items

--- a/_data/index/banners.yml
+++ b/_data/index/banners.yml
@@ -5,5 +5,5 @@
 - src: landing/header_test.jpg
   title: first banner image
 
-- src: landing/defense.JPG
+- src: landing/defense.jpg
   title: second banner image
