--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ description: Matthias' Website
 keywords: Matthias Franken, Speech, Auditory Feedback
 baseurl:  /homepage # if you have suburl as homepage like '/homepage', please change it to '/homepage' and your repo's name should be 'homepage'
 url: https://frankenmatthias.github.io/homepage  # url should be 'http://<github_username>.github.io/homepage' as before
+pdfurl: /homepage/pdfs/
 # url: http://127.0.0.1:4000
 img_path: /homepage/static/assets/img/blog  # url should be '/homepage/static/assets/img/blog' as before
 
