--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ author:  # change following line to your infomation.
   facebook_username:   # Leave blank if you don't have now
   twitter_username: MatthiasFranken  # Leave blank if you don't have now
   email: matthias.franken@ugent.be  # Leave blank if you don't have now
-  cv:  # An online CV can be printed as PDF, leave blank if you don't have now
+  cv:  cv_MatthiasFranken.pdf # An online CV can be printed as PDF, leave blank if you don't have now
   # skill icons are on avatar's left and right side. Reference urls are http://fontawesome.io/ and http://fizzed.com/oss/font-mfizz
   skill_icon1:
     - name: fa-commenting-o
@@ -39,7 +39,7 @@ disqus:  # if you wanna comment feature, go to https://disqus.com/ to get your c
 # analytics
 ## google analytics
 ga:  # if you wanna this feature, go to https://www.google.com/analytics/ to get your configuration; if not, comment following line.
-#  id: UA-93473370-3
+  id: UA-148484430-1
 
 ## google optimize
 go:
