--- a/_config.yml
+++ b/_config.yml
@@ -29,8 +29,8 @@ author:  # change following line to your infomation.
   skill_icon2:
     - name: fa-language
     - name: fa-commenting-o
-  desc: "I am a postdoctoral speech scientist at Ghent University. My main research interest is the sensorimotor nature of speech production. 
-  During my PhD research project at Radboud University (Nijmegen, the Netherlands), I investigated the relationship between speech perception and speech production, with a special emphasis on the role of auditory feedback in speech production. Currently, I'm investigating the snese of agency during speech production, and the role auditory feedback plays in vocal agency. I conduct my research using various techniques, including altered auditory feedback as well as neuroimaging techniques (e.g., magnetoencephalography)." # Describe yourself.
+  desc: "I am a postdoctoral speech scientist at Ghent University. My main research interest is the sensorimotor nature of speech production. During my PhD research project at Radboud University (Nijmegen, the Netherlands), I investigated the relationship between speech perception and speech production, 
+  with a special emphasis on the role of auditory feedback in speech production. <br>Currently, I'm investigating the snese of agency during speech production, and the role auditory feedback plays in vocal agency. I conduct my research using various techniques, including altered auditory feedback as well as neuroimaging techniques (e.g., magnetoencephalography)." # Describe yourself.
 
 # comment
 disqus:  # if you wanna comment feature, go to https://disqus.com/ to get your configuration; if not, comment following two lines.
