--- a/_data/index/banners.yml
+++ b/_data/index/banners.yml
@@ -3,7 +3,7 @@
 #
 # Images are expected to be located in `static/assets/img/`.
 - src: landing/header_test.jpg
-  title: 
+  title: profile
 
 - src: landing/defense.jpg
   title: Defense
