--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # Website settings
 title: Matthias Franken
 description: Matthias' Website
-keywords: Matthias Franken, Speech, Auditory Feedback
+keywords: Matthias Franken, Speech, Auditory Feedback, Speech production, Speech perception, Altered auditory feedback, Cognitive Neuroscience, Phonetics, Linguistics, Nijmegen, Gent, Leuven, Leiden, Sense of agency
 baseurl:  /homepage # if you have suburl as homepage like '/homepage', please change it to '/homepage' and your repo's name should be 'homepage'
 url: https://frankenmatthias.github.io/homepage  # url should be 'http://<github_username>.github.io/homepage' as before
 pdfurl: /homepage/pdfs/
