--- a/_data/index/publications.yml
+++ b/_data/index/publications.yml
@@ -11,6 +11,7 @@
   volume: 72
   issue: 10
   pages: 2371-2379
+  article: Franken_2019_qjep.pdf
 
 - name: Self-monitoring in the cerebral cortex&#58; Neural responses to small pitch shifts in auditory feedback during speech production
   i18n: jalpc
