add poster pdf links

--- a/_data/index/presentations.yml
+++ b/_data/index/presentations.yml
@@ -10,6 +10,7 @@
   location: Moscow, Russia
   authors: <b>Franken, M. K.</b>, Hartsuiker, R. J., Johansson, P., Hall, L., & Lind, A.
   date: 6-8 September 2019
+  poster: https://mfr.de-1.osf.io/render?url=https://osf.io/gux29/?action=download%26mode=render
 
 - name: The effect of passive sound attenuation in an altered auditory feedback paradigm
   type: poster
@@ -18,6 +19,7 @@
   location: San Francisco, CA, USA
   authors: <b>Franken, M. K.</b>, Hartsuiker, R. J., Johansson, P., Hall, L., & Lind, A.
   date: 23-26 March 2019
+  poster: https://mfr.de-1.osf.io/render?url=https://osf.io/edk5n/?action=download%26mode=render
 
 - name: Opposing and following responses in sensorimotor speech control&#58; Why responses go both ways
   type: poster
@@ -26,6 +28,7 @@
   location: Nijmegen, the Netherlands
   authors: <b>Franken, M. K.</b>, Acheson, D. J., McQueen, J. M., Hagoort, P., & Eisner, F.
   date: 2-4 July 2018
+  poster: https://mfr.osf.io/render?url=https://osf.io/tpg38/?action=download%26mode=render
 
 - name: Opposing and following responses in sensorimotor speech control&#58; Why responses go both ways
   i18n: jalpc
