--- a/_data/index/publications.yml
+++ b/_data/index/publications.yml
@@ -1,6 +1,18 @@
 # projects section data
 # If you don't have language feature(language.yml is empty), ignore "i18n" items
 # Suggest projects' img be located at '/static/assets/img/landing', and edit following img items.
+- name: Does passive sound attenuation affect responses to pitch-shifted auditory feedback?
+  i18n: jalpc
+  type: journal
+  outlet: Journal of the Acoustical Society of America
+  year: in press
+  doi: 
+  authors: <b>Franken, M. K.</b>, Hartsuiker, R. J., Johansson, P., Hall, L., Wartenberg, T., & Lind, A.
+  volume: 
+  issue: 
+  pages: 
+  article: Franken_JASA_accepted.pdf
+
 - name: Consistency influences altered auditory feedback processing
   i18n: jalpc
   type: journal
