--- a/_data/index/presentations.yml
+++ b/_data/index/presentations.yml
@@ -5,6 +5,15 @@
 - name: Sense of agency is flexible during speech production with altered auditory feedback
   i18n: jalpc
   type: poster
+  conference: the Dutch society for brain and cognition (NVP)
+  year: 2019
+  location: Egmond-aan-zee, the Netherlands
+  authors: <b>Franken, M. K.</b>, Hartsuiker, R. J., Johansson, P., Hall, L., & Lind, A.
+  date: 19-21 December 2019
+
+- name: Sense of agency is flexible during speech production with altered auditory feedback
+  i18n: jalpc
+  type: poster
   conference: 25th Architectures and Mechanisms of Language Processing Conference (AMLaP)
   year: 2019
   location: Moscow, Russia
