--- a/_data/index/publications.yml
+++ b/_data/index/publications.yml
@@ -56,6 +56,7 @@
   volume: 142
   issue: 4
   pages: 2007-2018
+  article: Franken_JASA2017.pdf
 
 - authors: <b>Franken, M. K.</b>, Eisner, F., Schoffelen, J.-M., Acheson, D. J., Hagoort, P., & McQueen, J. M.
   year: 2017
