allow future talks

--- a/_data/index/presentations.yml
+++ b/_data/index/presentations.yml
@@ -10,7 +10,7 @@
   location: Providence, RI, USA
   authors: <b>Franken, M.K.</b>, Hartsuiker, R. J., Johansson, P., Hall, L., & Lind, A.
   date: 14-17 December 2020
-  past: no
+  future: yes
 
 - name: Audiovisual recalibration of vowel categories and their temporal stability
   i18n: jalpc
@@ -19,7 +19,7 @@
   year: 2020
   location: Kaiserslautern, Germany
   authors: Mock, C., <b>Franken, M. K.</b>, & Hartsuiker, R. J.
-  past: no
+  future: yes
 
 - name: Drifting pitch awareness after exposure to altered auditory feedback
   i18n: jalpc
@@ -28,7 +28,7 @@
   year: 2020
   location: Kaiserslautern, Germany
   authors: <b>Franken, M. K.</b>, Hartsuiker, R. J., Johansson, P., Hall, L., & Lind, A.
-  past: no
+  future: yes
 
 - name: Sense of agency is flexible during speech production with altered auditory feedback
   i18n: jalpc
