--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ author:  # change following line to your infomation.
   github_username: frankenmatthias  # Leave blank if you don't have now
   linkedin_id: matthias-franken-340a7146 # Leave blank if you don't have now
   facebook_username:   # Leave blank if you don't have now
+  publons: J-2169-2019
   twitter_username: MatthiasFranken  # Leave blank if you don't have now
   email: matthias.franken@ugent.be  # Leave blank if you don't have now
   cv:  cv_MatthiasFranken.pdf # An online CV can be printed as PDF, leave blank if you don't have now
