--- a/_data/index/presentations.yml
+++ b/_data/index/presentations.yml
@@ -19,7 +19,7 @@
   year: 2020
   location: Kaiserslautern, Germany
   authors: Mock, C., <b>Franken, M. K.</b>, & Hartsuiker, R. J.
-  date: [postponed due to the CoVid-19 pandemic]
+  date: \[postponed due to the CoVid-19 pandemic\]
   future: yes
 
 - name: Drifting pitch awareness after exposure to altered auditory feedback
