--- a/_data/index/presentations.yml
+++ b/_data/index/presentations.yml
@@ -19,7 +19,7 @@
   year: 2020
   location: Kaiserslautern, Germany
   authors: Mock, C., <b>Franken, M. K.</b>, & Hartsuiker, R. J.
-  date: &#91; postponed due to the CoVid-19 pandemic\]
+  date: "[postponed due to the CoVid-19 pandemic]"
   future: yes
 
 - name: Drifting pitch awareness after exposure to altered auditory feedback
@@ -29,7 +29,7 @@
   year: 2020
   location: Kaiserslautern, Germany
   authors: <b>Franken, M. K.</b>, Hartsuiker, R. J., Johansson, P., Hall, L., & Lind, A.
-  date: [postponed due to the CoVid-19 pandemic]
+  date: "[postponed due to the CoVid-19 pandemic]"
   future: yes
 
 - name: Sense of agency is flexible during speech production with altered auditory feedback
