add alien voice DOI

--- a/_data/index/publications.yml
+++ b/_data/index/publications.yml
@@ -6,7 +6,7 @@
   type: journal
   outlet: Journal of Experimental Psychology&#58; Human Perception & Performance
   year: [accepted]
-  doi: 
+  doi: 10.1037/xhp0000799
   authors: <b>Franken, M. K.</b>, Hartsuiker, R. J., Johansson, P., Hall, L., & Lind, A.
   volume: 
   issue: 
