--- a/_data/index/careers.yml
+++ b/_data/index/careers.yml
@@ -3,7 +3,7 @@
 - name:
     detail: McGill University, Montreal, Canada
   desc:
-    detail: Postdoctoral Researcher, Department of Psychology <br>PI&#58; David Ostry
+    detail: Postdoctoral Researcher, Motor Neuroscience Lab<br>Department of Psychology <br>PI&#58; David Ostry
   date:
     detail: Jan. 2021
   job:
