update alien voice pub

--- a/_data/index/publications.yml
+++ b/_data/index/publications.yml
@@ -5,11 +5,11 @@
   i18n: jalpc
   type: journal
   outlet: Journal of Experimental Psychology&#58; Human Perception & Performance
-  year: [accepted]
+  year: 2021
   doi: 10.1037/xhp0000799
   authors: <b>Franken, M. K.</b>, Hartsuiker, R. J., Johansson, P., Hall, L., & Lind, A.
   volume: 
-  issue: 
+  issue: advance online publication
   pages: 
   article: Franken_JEPHPP_accepted.pdf
 
