--- a/_data/index/publications.yml
+++ b/_data/index/publications.yml
@@ -9,7 +9,7 @@
   doi: 10.1037/xhp0000799
   authors: <b>Franken, M. K.</b>, Hartsuiker, R. J., Johansson, P., Hall, L., & Lind, A.
   volume: 
-  issue: advance online pub
+  issue: advance online publication
   pages: 
   article: Franken_JEPHPP_accepted.pdf
 
