--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ author:  # change following line to your infomation.
   facebook_username:   # Leave blank if you don't have now
   publons: J-2169-2019
   twitter_username: MatthiasFranken  # Leave blank if you don't have now
-  email: matthias.franken@ugent.be  # Leave blank if you don't have now
+  email: matthias.franken@mail.mcgill.ca  # Leave blank if you don't have now
   cv:  cv_MatthiasFranken.pdf # An online CV can be printed as PDF, leave blank if you don't have now
   # skill icons are on avatar's left and right side. Reference urls are http://fontawesome.io/ and http://fizzed.com/oss/font-mfizz
   skill_icon1:
